--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     
+    
     <header>
         <h1 class='page-title'>Taskinator</h1>
         <p>Click the button below to add a new task!</p>
@@ -38,7 +39,8 @@
         </form>
     </header>
 
-    <main class='page-content'>
+
+    <main class='page-content' id="page-content">
         <section class='task-list-wrapper'>
             <h2 class='list-title'>Tasks To Do</h2>
             <ul class='task-list' id='tasks-to-do'></ul>
@@ -55,11 +57,14 @@
         </section>
     </main>
 
+
     <footer>
         &copy;<script>document.write(new Date().getFullYear())</script> by Taskinator
     </footer>
 
+
     <script src='./assets/js/script.js'></script>
+
 
 </body>
 
